--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <button id="toggle-dark" style="display: none;">Toggle Dark Mode</button>
     <header>
         <a href="https://thehccreation.github.io/home/">
-            <img src="/assets/hcc-logo-transparent.png" alt="">
+            <img src="https://ik.imagekit.io/tovuwazhze/homepage%20assets/hcc-logo-transparent.png?updatedAt=1722260211390" alt="">
         </a>
         <h1>
             QuickNotes</h1>
