--- a/index.html
+++ b/index.html
@@ -2,46 +2,48 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>QuickNotes by thehccreation</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>QuickNotes 2.0</title>
     <link rel="shortcut icon" href="https://ik.imagekit.io/tovuwazhze/homepage%20assets/hcc-favicon.jpg?updatedAt=1705154642736" type="image/x-icon">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Shadows+Into+Light&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <!-- <header>
-        <h1>QuickNote by THEHCCREATION</h1>
-    </header> -->
-    <button id="toggle-dark" style="display: none;">Toggle Dark Mode</button>
-    <header>
-        <a href="https://thehccreation.github.io/home/">
-            <img src="https://ik.imagekit.io/tovuwazhze/homepage%20assets/hcc-logo-transparent.png?updatedAt=1722260211390" alt="">
+    <!-- Header -->
+    <header class="header">
+        <a href="https://thehccreation.github.io/home/" target="_blank" rel="noopener noreferrer">
+            <img class="logo" title="THEHCCREATION" src="https://ik.imagekit.io/tovuwazhze/homepage%20assets/hcc-logo-transparent.png?updatedAt=1722260211390" alt="">
         </a>
-        <h1>
-            QuickNotes</h1>
+        <h1 id="typedtext">QuickNotes</h1>
+        <p>Your personal note-taking app.</p>
     </header>
 
-    <div class="cover">
-
-        <section id="note-section">
-            <textarea id="note-input" placeholder="Write your note here..."></textarea>
-            <div class="btn-grp">
-                <button id="save-note">Save Note</button>
-                <button id="export-pdf">Export PDF</button>
+    <!-- Note Creation Form -->
+    <div class="note-input-container">
+        <div id="note-input-box" class="note-input-box">
+            <input title="write title here" type="text" id="noteTitle" placeholder="Note Title">
+            <textarea title="write content here" id="noteContent" placeholder="Note Content"></textarea>
+            <div class="button-group">
+                <button id="clearBtn" class="btn clear-btn">Clear</button>
+                <button id="addNoteBtn" class="btn add-btn">Add Note</button>
             </div>
-        </section>
-        <section class="s2">
-            <h2>Your Notes</h2>
-            <ul id="notes-list"></ul>
-        </section>
+        </div>
     </div>
 
-    <footer>
-        <p>Notes are stored in your browser. No account needed.</p>
-    </footer>
+    <!-- Existing Notes Container -->
+    <div class="notes-grid-container" id="notesGrid">
+        <!-- Notes will be dynamically added here by JavaScript -->
+    </div>
+	<!-- Footer -->	
+	<footer>
+		<p>Develop What Matters.<br>
+			<i>
+				version 2.0
+			</i>
+		</p>
+	</footer>
 
-    <script src="app.js"></script>
+    <!-- JavaScript Logic (Includes Local Storage, Session Storage, Edit, and Print Feature) -->
+    <script src="script.js"></script>
 </body>
 </html>
